--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "lint": "echo \"No linting configured\"",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=icons/icon.icns --prune=true --out=out",
+    "package-win": "electron-packager . --overwrite --platform=win32 --arch=x64 --icon=icons/icon.ico --prune=true --out=out",
+    "package-linux": "electron-packager . --overwrite --platform=linux --arch=x64 --icon=icons/icon.png --prune=true --out=out"
   },
   "keywords": [],
   "author": {
@@ -27,6 +30,7 @@
     "@electron-forge/maker-squirrel": "^6.4.2",
     "@electron-forge/maker-zip": "^6.4.2",
     "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
-    "electron": "26.2.2"
+    "electron": "26.2.2",
+    "electron-packager": "^17.1.2"
   }
 }
