--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "echo \"No linting configured\"",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=icons/icon.icns --prune=true --out=out",
     "package-win": "electron-packager . --overwrite --platform=win32 --arch=x64 --icon=icons/icon.ico --prune=true --out=out",
-    "package-linux": "electron-packager . --overwrite --platform=linux --arch=x64 --icon=icons/icon.png --prune=true --out=out"
+    "package-linux": "electron-packager . --overwrite --platform=linux --arch=x64 --icon=icons/icon.png --prune=true --out=out",
+    "test": "jest"
   },
   "keywords": [],
   "author": {
@@ -31,6 +32,11 @@
     "@electron-forge/maker-zip": "^6.4.2",
     "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
     "electron": "26.2.2",
-    "electron-packager": "^17.1.2"
+    "electron-packager": "^17.1.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
